my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EASZVAR_5/T_EASZVAR_5-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EASZVAR_5_STRUCT_H
#define T_EASZVAR_5_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EASZVAR_5(void);


#endif /* not T_EASZVAR_5_STRUCT_H */
